--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -181,10 +181,10 @@
     &.stick {
         -webkit-animation: 700ms ease-in-out 0s normal none 1 running fadeInDown;
         animation: 700ms ease-in-out 0s normal none 1 running fadeInDown;
-        -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.05);
-        box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.05);
+        -webkit-box-shadow: 0 0px 20px 10px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 0px 20px 10px rgba(0, 0, 0, 0.05);
         position: fixed;
-        top: 0;
+        padding: 10px;
         width: 100%;
         z-index: 999;
         left: 0;
