--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -88,6 +88,7 @@ $background-urgent: #ffcfc5;
 $background-head-single: #FFF9F3;
 $background-blue-light: #c5e3ff;
 $background-blue-light-2: #E9F7FF;
+$background-red: #FE4B4B;
 $background-primary-trans: rgba(81, 146, 255, 0.3);
 $background-primary: rgba(81, 146, 255, 1);
 $background-grey: rgba(186, 186, 186, 0.3);
