--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -147,3 +147,26 @@ textarea {
 label {
 	margin-bottom: 5px;
 }
+
+.css-w9q2zk-Input2 {
+	padding:0 !important;
+	margin: 0 !important;
+}
+
+.css-13cymwt-control {
+	height: 50px !important;
+}
+
+.css-1u9des2-indicatorSeparator {
+	display: none;
+}
+
+.form-control {
+	border-color: hsl(0, 0%, 80%);
+}
+
+.form-group {
+	input {
+		border-color: hsl(0, 0%, 80%);
+	}
+}
